@@ -1,3 +1,6 @@
+rev 613 (2024-12-19) (krueschan)
+- edits to display 2035 results in pledges and time series tables
+
 rev 612 (2024-11-12) (krueschan)
 - make 2035 default display year
 
